# TerraWing

./: .env.dist  .gitignore  README.md  Readme.md  TrainNeuralNetwork.ipynb  pyproject.toml
src/: app.py  loader.py
src/data/: __init__.py  config.py  drone_connections.py  logger_config.py
src/database/: __init__.py  base.py  db.py  db_settings.py
src/neural_network/: TrainNeuralNetwork.ipynb  __init__.py  ai.py
src/routes/: __init__.py  broadcast.py  connect_drone.py
tests/: test_aiortc_client.py  test_aiortc_server.py  test_video_stream.py
