[tool.poetry]
name = "TerraWing"
version = "0.1.0"
description = ""
authors = ["DIMFLIX <112165977+DIMFLIX-OFFICIAL@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
aiortc = "^1.8.0"
av = ">=9.0.0,<12.0.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
logging-config = "^1.0.4"
jupyter = "^1.0.0"
opencv-python = "^4.9.0.80"
websockets = "^12.0"
aiohttp = "^3.9.4"
pyav = "^12.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = ".venv"